tests/error/misc_errors/state_result_tag_not_const.err
Error: Expected a string literal (at $FILE:12:17)
   | 
10 | def main(y: bool) -> None:
11 |     q1 = qubit()
12 |     state_result("foo" if y else "bar", q1)
   |                  ^^^^^^^^^^^^^^^^^^^^^ Expected a string literal

Guppy compilation failed due to 1 previous error
